src/test/ui/regions/regions-in-structs.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/regions-in-structs.rs:10:9
   |
LL | struct StructDecl {
   |                  - help: consider introducing lifetime `'a` here: `<'a>`
LL |     a: &'a isize,
   |         ^^ undeclared lifetime
   |
   = help: if you want to experiment with in-band lifetime bindings, add `#![feature(in_band_lifetimes)]` to the crate attributes

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/regions-in-structs.rs:11:9
   |
LL | struct StructDecl {
   |                  - help: consider introducing lifetime `'a` here: `<'a>`
LL |     a: &'a isize,
LL |     b: &'a isize,
   |         ^^ undeclared lifetime
   |
   = help: if you want to experiment with in-band lifetime bindings, add `#![feature(in_band_lifetimes)]` to the crate attributes

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0261`.
